# PAD

./: main.py  pyproject.toml  zad1.py  zad2.py  zad3.py  zad4.py
dane/: Zadanie_2.csv
